src/style/_information.scss
.info
{
    margin: 0 0 2em 0;

    p, li, table
    {
        @include regular_text();

        a 
        {
            @include inline-link-text();
        }
    }

    div > a, a.info__extdocs.link
    {

        transition: all .4s;

        @include regular_text($color: $info-link-font-color);

        &:hover
        {
            color: $info-link-font-color--hover;
        }
    }
    > div
    {
        margin: 0 0 .5em 0;
    }

    .base-url
    {
        margin: 0 0 1em 0;

        pre 
        {
            @include regular_text();
        }
    }
}


.info__header
{
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    
    hgroup
    {
        margin: 0 0 1em 0;
        a
        {
            @include regular_text($color: $info-link-font-color);
        }
    }
}

.info__header__icon
{
    font-size: $xl-text-font-size;
}

.info__header__title
{
    margin-bottom: 2em;
    
    > span
    {
        display: block;
        margin-bottom: .625rem;
        @include light_text($size: $xxl-text-font-size);
    }

    small
    {
        display: inline-block;
        
        padding: .3em .5em;

        border-radius: 3px;
        background: $info-title-small-background-color;

        pre
        {
            margin: 0;
            padding: 0;

            @include regular_text($color: $color-white, $size: $xs-text-font-size);
        }
    }
}

.info__description
{
    margin: 0 0 2em 0;
}

.info__menu
{
    display: flex;

    > div {
        padding: 0 2em;
        border-right: 1px solid $color-primary;

        &:first-child {
            padding-left: 0;
        }

        &:last-child {
            border: none;
        }
    }
}

